RESOLVED FIXED53012
IndexedDatabase methods should not take arguments of type OptionsObject
https://bugs.webkit.org/show_bug.cgi?id=53012
Summary IndexedDatabase methods should not take arguments of type OptionsObject
Andrei Popescu
Reported 2011-01-24 08:07:43 PST
IndexedDatabase methods should not take arguments of type OptionsObject
Attachments
Patch (53.08 KB, patch)
2011-01-24 08:32 PST, Andrei Popescu
no flags
Patch (53.06 KB, patch)
2011-01-24 09:05 PST, Andrei Popescu
japhet: review+
Andrei Popescu
Comment 1 2011-01-24 08:32:39 PST
Hans Wennborg
Comment 2 2011-01-24 08:49:34 PST
Looks good as far as I can tell.
WebKit Review Bot
Comment 3 2011-01-24 08:53:06 PST
Andrei Popescu
Comment 4 2011-01-24 09:05:34 PST
Nate Chapin
Comment 5 2011-01-24 09:40:02 PST
Comment on attachment 79934 [details] Patch My only complaint is that we're adding yet another converter to V8Binding.cpp, but I don't think that's avoidable.
Hans Wennborg
Comment 6 2011-01-24 09:45:50 PST
Comment on attachment 79934 [details] Patch > Source/WebCore/storage/IDBDatabase.cpp:113 > + if (timeout > std::numeric_limits<unsigned long>::max()) It still feels fishy. It seems to me this condition can never be true?
WebKit Review Bot
Comment 7 2011-01-24 09:59:57 PST
Jeremy Orlow
Comment 8 2011-01-24 10:50:02 PST
Comment on attachment 79934 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=79934&action=review LGTM > Source/WebCore/bindings/v8/V8Binding.h:35 > +#include "DOMStringList.h" Just forward declare here. >> Source/WebCore/storage/IDBDatabase.cpp:113 >> + if (timeout > std::numeric_limits<unsigned long>::max()) > > It still feels fishy. It seems to me this condition can never be true? It really doesn't matter either way...
Andrei Popescu
Comment 9 2011-01-24 10:55:07 PST
(In reply to comment #8) > (From update of attachment 79934 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=79934&action=review > > LGTM > > > Source/WebCore/bindings/v8/V8Binding.h:35 > > +#include "DOMStringList.h" > > Just forward declare here. > Done. > >> Source/WebCore/storage/IDBDatabase.cpp:113 > >> + if (timeout > std::numeric_limits<unsigned long>::max()) > > > > It still feels fishy. It seems to me this condition can never be true? > > It really doesn't matter either way... I will remove that check then and land. Thanks all for the reviews!
Andrei Popescu
Comment 10 2011-01-24 11:02:05 PST
Note You need to log in before you can comment on or make changes to this bug.