2011-01-24  Andrei Popescu  <andreip@google.com>

Reviewed by Nate Chapin.

        IndexedDatabase methods should not take arguments of type OptionsObject
        https://bugs.webkit.org/show_bug.cgi?id=53012

        * storage/indexeddb/create-object-store-options-expected.txt:
        * storage/indexeddb/create-object-store-options.html:
        * storage/indexeddb/cursor-delete-expected.txt:
        * storage/indexeddb/cursor-delete.html:
        * storage/indexeddb/cursor-index-delete-expected.txt:
        * storage/indexeddb/cursor-index-delete.html:
        * storage/indexeddb/data-corruption-expected.txt:
        * storage/indexeddb/data-corruption.html:
        * storage/indexeddb/database-quota-expected.txt:
        * storage/indexeddb/database-quota.html:
        * storage/indexeddb/index-cursor.html:
        * storage/indexeddb/objectstore-basics-expected.txt:
        * storage/indexeddb/objectstore-basics.html:
        * storage/indexeddb/objectstore-cursor.html:
        * storage/indexeddb/open-cursor-expected.txt:
        * storage/indexeddb/open-cursor.html:
        * storage/indexeddb/transaction-and-objectstore-calls-expected.txt:
        * storage/indexeddb/transaction-and-objectstore-calls.html:
        * storage/indexeddb/tutorial.html:
2011-01-24  Andrei Popescu  <andreip@google.com>

        Reviewed by Nate Chapin.

        IndexedDatabase methods should not take arguments of type OptionsObject
        https://bugs.webkit.org/show_bug.cgi?id=53012

        This patch reverts all IDB methods, except IDBDatabase::createObjectStore and
        IDBObjectStore::createIndex, to using a plain list of arguments instead of
        grouping the various parameters inside a single OptionsObject argument.
        This decision was made on public-webapps@w3.org mailing list.

        We also add support (v8 only for now) for passing DOMStringList objects as arguments to native
        methods. The code for obtaining a DOMStringList object from a JS array of strings existed already
        in OptionsObject.cpp, I just copied it to V8Bindings.cpp and taught the v8 code generator how to
        use it.

        * bindings/scripts/CodeGeneratorV8.pm:
        * bindings/v8/V8Binding.cpp:
        (WebCore::v8ValueToWebCoreDOMStringList):
        * bindings/v8/V8Binding.h:
        * storage/IDBDatabase.cpp:
        (WebCore::IDBDatabase::transaction):
        * storage/IDBDatabase.h:
        (WebCore::IDBDatabase::transaction):
        * storage/IDBDatabase.idl:
        * storage/IDBIndex.cpp:
        (WebCore::IDBIndex::openCursor):
        (WebCore::IDBIndex::openKeyCursor):
        * storage/IDBIndex.h:
        (WebCore::IDBIndex::openCursor):
        (WebCore::IDBIndex::openKeyCursor):
        * storage/IDBIndex.idl:
        * storage/IDBObjectStore.cpp:
        (WebCore::IDBObjectStore::openCursor):
        * storage/IDBObjectStore.h:
        (WebCore::IDBObjectStore::openCursor):
        * storage/IDBObjectStore.idl:

Canonical link: https://commits.webkit.org/66764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76531 268f45cc-cd09-0410-ab3c-d52691b4dbfc